samples/_failures_safe/1761554855_15782c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_38a50e83.c: In function ‘main’:
./samples/SAFE/__tmp_38a50e83.c:154:5: error: expected expression at end of input
  154 |     mat1.cols =
      |     ^~~~
./samples/SAFE/__tmp_38a50e83.c:154:5: error: expected declaration or statement at end of input
